Unified formatter.